Resolve overflow issues (#26)
* fix: Footer overflow issue fixed

* fix: Fixed the paragraph sizing issues

* fix: Fixed the hero section overflow of paragraph issue and Incubation overflow issue

* chore: Changed the sharable card images

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap'); */
 /* Tailwind CSS base styles */
 @import "tailwindcss";
 
@@ -62,6 +61,8 @@
     --font-size-7: 2rem;
     --font-size-9: 2.5rem;
     --font-size-12: 5rem;
+
+    --phi-quarter: 1.125;
 }
 
 body {
@@ -165,6 +166,10 @@ p {
   h6 {
     font-size: var(--font-size-5);
   }
+  p {
+    font-size: var(--font-size-2);
+    line-height: 1.65;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -188,6 +193,10 @@ p {
   }
   h6 {
     font-size: var(--font-size-3);
+  }
+  p {
+    font-size: calc(var(--font-size-1) / var(--phi-quarter));
+    line-height: 1.6;
   }
 }
 
@@ -213,6 +222,10 @@ p {
   h6 {
     font-size: var(--font-size-2);
   }
+  p {
+    font-size: var(--font-size-1);
+    line-height: 1.6;
+  }
 }
 
 @media screen and (max-width: 330px) {
@@ -236,6 +249,10 @@ p {
   }
   h6 {
     font-size: var(--font-size-1);
+  }
+  p {
+    font-size: 0.875rem;
+    line-height: 1.6;
   }
 }
 
